fixing resume comment when user is viewing on mobile and desktop

--- a/src/component/resume/resume.scss
+++ b/src/component/resume/resume.scss
@@ -6,6 +6,9 @@
     align-items: center;
     justify-content: center;
 }
+.message{
+    display: none;
+}
 
 @media (max-width: $ipad) and (min-width: $mobile-sm){
     .wrapper{
